# FramelessWindow

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/mainwindow/: CMakeLists.txt  dark-style.qss  light-style.qss  main.cpp  mainwindow.qrc
src/FramelessWindow/: CMakeLists.txt
src/FramelessWindow/Include/FramelessWindow/: FramelessDialog.h  FramelessTheme.h  FramelessWindow.h
src/FramelessWindow/Resources/: windowbar.qrc
src/FramelessWindow/Resources/windowbar/: dark-style.qss  light-style.qss
src/FramelessWindow/Src/: FramelessDialog.cpp  FramelessHelper.hpp  FramelessWindow.cpp  windowbar.cpp  windowbar.h  windowbar_p.h  windowbutton.cpp  windowbutton.h  windowbutton_p.h
src/FramelessWindow/Src/core/: qwindowkit_windows.h  qwkglobal.h  qwkglobal_p.h  windowagentbase.cpp  windowagentbase.h  windowagentbase_p.h  windowitemdelegate_p.h
src/FramelessWindow/Src/core/contexts/: abstractwindowcontext.cpp  abstractwindowcontext_p.h  win32windowcontext.cpp  win32windowcontext_p.h
src/FramelessWindow/Src/core/kernel/: nativeeventfilter_p.h  sharedeventfilter_p.h  winidchangeeventfilter.cpp  winidchangeeventfilter_p.h
src/FramelessWindow/Src/core/shared/: qwkwindowsextra_p.h  windows10borderhandler_p.h
src/FramelessWindow/Src/core/style/: styleagent.h  styleagent_p.h  styleagent_win.cpp
src/FramelessWindow/Src/widgets/: qwkwidgetsglobal.h  widgetitemdelegate.cpp  widgetitemdelegate_p.h  widgetwindowagent.cpp  widgetwindowagent.h  widgetwindowagent_mac.cpp  widgetwindowagent_p.h  widgetwindowagent_win.cpp
